게시글 수정, 게시글 보기, 게시글 작성 MVC구조로 변경

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,15 +17,17 @@
         <activity
             android:name=".setting.SettingActivity"
             android:exported="false" />
+<!--        <activity-->
+<!--            android:name=".pages.board.edit.BoardEditActivity"-->
+<!--            android:exported="false" />-->
+        <activity android:name=".pages.board.edit.BoardEditView"/>
+        <activity android:name=".pages.board.Inside.BoardInsideView"/>
+        <activity android:name=".pages.board.write.BoardWriteView"/>
+
         <activity
-            android:name=".board.BoardEditActivity"
+            android:name=".pages.board.BoardWriteActivity"
             android:exported="false" />
-        <activity
-            android:name=".board.BoardInsideActivity"
-            android:exported="false" />
-        <activity
-            android:name=".board.BoardWriteActivity"
-            android:exported="false" />
+
         <activity
             android:name=".auth.JoinActivity"
             android:exported="false" />
