프로젝트 구인 페이지 작성 기능 구현

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,6 +23,8 @@
         <activity android:name=".pages.board.edit.BoardEditView"/>
         <activity android:name=".pages.board.Inside.BoardInsideView"/>
         <activity android:name=".pages.board.write.BoardWriteView"/>
+        <activity android:name=".pages.teamBuilding.TeamBuildingWriteActivity" />
+
 
         <activity
             android:name=".auth.JoinActivity"
