--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" >
-
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
@@ -13,6 +12,7 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/Theme.pathfinder"
+        android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
             android:name=".pages.setting.SettingActivity"
@@ -24,6 +24,7 @@
         <activity android:name=".pages.board.Inside.BoardInsideView"/>
         <activity android:name=".pages.board.write.BoardWriteView"/>
         <activity android:name=".pages.teamBuilding.TeamBuildingWriteActivity" />
+
 
 
         <activity
