--- a/build.gradle
+++ b/build.gradle
@@ -7,15 +7,12 @@ buildscript {
         mavenCentral()  // Maven Central repository
 
     }
-    dependencies {
-        // Add the dependency for the Google services Gradle plugin
-        classpath 'com.google.gms:google-services:4.3.15'
 
-    }
 }
 
 plugins {
     id 'com.android.application' version '8.1.2' apply false
     id 'com.android.library' version '8.1.2' apply false
     id 'org.jetbrains.kotlin.android' version '1.8.0' apply false
+    id("com.google.gms.google-services") version "4.4.0" apply false
 }
