--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,6 +24,7 @@
         <activity android:name=".ui.board.view.BoardInsideActivity"/>
         <activity android:name=".ui.board.view.BoardWriteActivity"/>
         <activity android:name=".ui.teamBuilding.TeamBuildingWriteActivity" />
+        <activity android:name=".ui.teamBuilding.TeamBuildingInsideActivity" />
 
 
 
