--- a/app/build.gradle
+++ b/app/build.gradle
@@ -65,6 +65,7 @@ dependencies {
     implementation("androidx.compose.material3:material3-window-size-class:1.1.2")
     implementation 'androidx.recyclerview:recyclerview:1.3.2'
     implementation 'com.google.firebase:firebase-firestore:24.9.1'
+    implementation 'com.github.getActivity:Toaster:12.5'
 
     // Import the Firebase BoM
     implementation(platform("com.google.firebase:firebase-bom:32.5.0"))
