--- a/app/build.gradle
+++ b/app/build.gradle
@@ -66,6 +66,7 @@ dependencies {
     implementation 'androidx.recyclerview:recyclerview:1.3.2'
     implementation 'com.google.firebase:firebase-firestore:24.9.1'
     implementation 'com.github.getActivity:Toaster:12.5'
+    implementation 'com.github.unaisulhadi:emojiratingbar:1.0.5'
 
     // Import the Firebase BoM
     implementation(platform("com.google.firebase:firebase-bom:32.5.0"))
