--- a/app/build.gradle
+++ b/app/build.gradle
@@ -98,6 +98,10 @@ dependencies {
 
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.okhttp3:okhttp:4.11.0'
+    // Gson 컨버터
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+    // OkHttp 로깅 인터셉터
+    implementation 'com.squareup.okhttp3:logging-interceptor:4.10.0'
 
     def composeBom = platform('androidx.compose:compose-bom:2023.01.00')
     implementation composeBom
