--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,11 +25,11 @@
             android:name=".ui.userProfile.ModifyActivity"
             android:exported="false" />
         <activity android:name=".ui.board.view.BoardEditActivity"/>
-        <activity android:name=".ui.board.view.BoardInsideActivity"/>
-        <activity android:name=".ui.board.view.BoardWriteActivity"/>
+        <activity android:name=".ui.board.BoardInsideActivity"/>
+        <activity android:name=".ui.board.BoardWriteActivity"/>
         <activity android:name=".ui.teamBuilding.TeamBuildingWriteActivity" />
         <activity android:name=".ui.teamBuilding.TeamBuildingInsideActivity" />
-        <activity android:name=".ui.board.view.BoardActivity" />
+        <activity android:name=".ui.board.BoardActivity" />
 
 
 
