[Add] 내가 작성한 글 보여주기 기능 추가, 프로필 관련 코드 리팩토링

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,7 +22,7 @@
 <!--            android:name=".pages.board.edit.BoardEditActivity"-->
 <!--            android:exported="false" />-->
         <activity
-            android:name=".ui.userProfile.ModifyActivity"
+            android:name=".ui.userProfile.EditUserProfileActivity"
             android:exported="false" />
 
         <activity android:name=".ui.board.BoardInsideActivity"/>
